<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello3" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello4" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello5" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello6" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello7" />

    <Button
        android:id="@+id/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="jump"
        android:text="按钮" />

</LinearLayout>